# rView

./: .gitignore  Cargo.toml  LICENSE  PROJECT_OVERVIEW.md  README.md  build.ps1  todo.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: performance.rs
docs/: BUILD_SPEED.md
installers/linux/: rview.desktop
installers/macos/: Info.plist
installers/windows/: README.md  rview.iss
scripts/: check-deps.sh  pre-commit.sh
shaders/: adjustments.wgsl
src/: app.rs  errors.rs  exif_data.rs  gpu.rs  image_cache.rs  image_loader.rs  logging.rs  main.rs  metadata.rs  profiler.rs  settings.rs  task_scheduler.rs  telemetry.rs  tests.rs  ui.rs  updates.rs
src/app/: cache.rs  editing.rs  file_ops.rs  image_loading.rs  mod.rs  navigation.rs  overlays.rs  sorting.rs  state.rs  zoom.rs
src/catalog/: collections.rs  database.rs  import.rs  mod.rs
src/gpu/: adjustments.rs  histogram.rs  info.rs  init.rs  mod.rs  overlays.rs  pipelines.rs  raw.rs  types.rs
src/gpu/adjustments/: buffer.rs  mod.rs  params.rs  texture.rs
src/image_loader/: adjustments.rs  extensions.rs  film_emulation.rs  histogram.rs  loader.rs  mod.rs  overlays.rs  thumbnail.rs
src/shaders/: adjustments.wgsl  histogram.wgsl  overlays.wgsl  raw_demosaic.wgsl
src/ui/: adjustments.rs  batch_processing_dialog.rs  batch_rename_dialog.rs  catalog.rs  command_palette.rs  common.rs  dialogs.rs  folders.rs  go_to_dialog.rs  histogram.rs  image_view.rs  keywording.rs  metadata.rs  mod.rs  move_dialog.rs  navigator.rs  settings_dialog.rs  sidebar.rs  sidebar_utils.rs  thumbnails.rs  toolbar.rs
src/ui/image_view/: compare_view.rs  drawing_utils.rs  input_handling.rs  mod.rs  single_view.rs
src/ui/main/: animation.rs  keyboard_input.rs  lightbox.rs  main_ui.rs  message_processing.rs  mod.rs  slideshow.rs  statusbar.rs  theme.rs
