[package]
name = "image_viewer"
version = "2.0.0"
edition = "2021"
authors = ["Image Viewer Team"]
description = "A modern, cross-platform image viewer with RAW support"
license = "MIT"
repository = "https://github.com/image-viewer/image-viewer"

[dependencies]
# GUI Framework
eframe = { version = "0.30", features = ["persistence"] }
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }

# Image processing
image = "0.25"
rawloader = "0.37"
imagepipe = "0.5"
imageproc = "0.25"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# File dialogs
rfd = "0.15"

# Notifications
notify-rust = "4"

# Logging
log = "0.4"
env_logger = "0.11"

# Tracing for performance profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"

# Serialization for settings
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Directory traversal
walkdir = "2"

# Natural sorting for filenames
natord = "1.0"

# Clipboard
arboard = "3"

# EXIF data
kamadak-exif = "0.5"

# Error handling
anyhow = "1"
thiserror = "2"

# Directories for config
directories = "5"

# Open files/folders
open = "5"

# Trash files
trash = "5"

# File watching
notify = "6"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Fuzzy search
fuzzy-matcher = "0.3"

# Parallel processing
rayon = "1.10"

# Lazy static initialization
lazy_static = "1.4"

# GPU acceleration
wgpu = "22.0"
pollster = "0.4"
bytemuck = "1.16"
futures-intrusive = "0.5"

# Random number generation
rand = "0.8"

# CPU core detection
num_cpus = "1.16"

# Image hashing for duplicate detection
img_hash = "3"

# Print support
printpdf = "0.7"

# Lossless JPEG operations
jpeg-encoder = "0.6"

# Color conversion
palette = "0.7"

# Regex for batch rename
regex = "1"

# Memory-mapped I/O
memmap2 = "0.9"
iconflow = { version = "1.0.0", features = ["pack-lucide"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }
wallpaper = "3"

[target.'cfg(target_os = "macos")'.dependencies]
wallpaper = "3"

[target.'cfg(target_os = "linux")'.dependencies]
wallpaper = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3"
